udev 117
========
Bugfixes.

All udev tools are merged into a single binary called udevadm.
The old names of the tools are built-in commands in udevadm now.
Symlinks to udevadm, with the names of the old tools, provide
the same functionality as the standalone tools. There is also
only a single udevadm.8 man page left for all tools.

Tools like mkinitramfs should be checked, if they need to include
udevadm in the list of files.

udev 116
========
Bugfixes.

udev 115
========
Bugfixes.

The etc/udev/rules.d/ directory now contains a default set of basic
udev rules. This initial version is the result of a rules file merge
of Fedora and openSUSE. For these both distros only a few specific
rules are left in their own file, named after the distro. Rules which
are optionally installed, because they are only valid for a specific
architecture, or rules for subsystems which are not always used are
in etc/udev/packages/.

udev 114
========
Bugfixes.

Dynamic rules can be created in /dev/.udev/rules.d/ to trigger
actions by dynamically created rules.

SYMLINK=="<value>" matches agains the entries in the list of
currently defined symlinks. The links are not created in the
filesystem at that point in time, but the values can be matched.

RUN{ignore_error}+="<program>" will ignore any exit code from the
program and not record as a failed event.

udev 113
========
Bugfixes.

Final merge of patches/features from the Ubuntu package.

udev 112
========
Bugfixes.

Control characters in filesystem label strings are no longer silenty
removed, but hex-encoded, to be able to uniquely identify the device
by its symlink in /dev/disk/by-label/.
If libvolume_id is used by mount(8), LABEL= will work as expected,
if slashes or other characters are used in the label string.

To test the existence of a file, TEST=="<file>" and TEST!="<file>"
can be specified now. The TEST key accepts an optional mode mask
TEST{0100}=="<is executable file>".
